# reminder-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE
.github/workflows/: docker-publish.yml
docker/: docker-compose.yml  example.env
locales/: app.yml
src/: auth.rs  config.rs  handlers.rs  main.rs  reminder.rs
