[package]
name = "reminder-bot"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
matrix-sdk = "0.18.0"
tokio = { version = "1.52.3", features = ["full"] }
anyhow = "1.0"
tracing-subscriber = "0.3"
tracing = "0.1"
clap = { version = "4.6.1", features = ["derive"] }
futures-util = "0.3.32"
dirs = "6.0.0"
rand = "0.10.1"
serde = "1.0.228"
serde_json = "1.0.150"
dotenvy = "0.15.7"
envy = "0.4.2"
tokio-rusqlite = "0.7"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
colored = "^3.1.1"
#temps = { version = "^4", features = ["chrono"] }
#human-date-parser = "^0.3.1"
rust-i18n = "^4.2.0"

[package.metadata.i18n]
available-locales = ["en", "ru"]
default-locale = "en"